PanelBuilder: move in wisp.ProbeFinder